worked on media queries and other small things

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
 			<div class="wrapper">
 				<section>
 					<header class="title">
-						Get <span>insights</span> that help<br />your
-						business grow.
+						Get <span>insights</span> that help your business
+						grow.
 					</header>
 					<p class="desc">
-						Discover the benefits of data analytics and
-						make<br />
-						better decisions regarding revenue, customer<br />
+						Discover the benefits of data analytics and make
+						better decisions regarding revenue, customer
 						experience, and overall efficiency.
 					</p>
 				</section>
